bk_ida/gccida/g1/ix86_function_value
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_function_value/src/i386.c:2748:1: error: must use 'enum' tag to refer to type 'mode_class'
mode_class v4; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_function_value/src/machmode.h:52:30: note: enum 'mode_class' is hidden by a non-type declaration of 'mode_class' here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_function_value/src/i386.c:2755:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( BYTE5( valtype->block.abstract_origin) >> 1), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_function_value/src/i386.c:2763:23: error: use of undeclared identifier 'machine_mode'
return gen_rtx_REG( ( machine_mode)( BYTE5( valtype->block.abstract_origin) >> 1), 0); 
                      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_function_value/src/i386.c:2768:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v4 = mode_class_0[v3 & 0x7F]; 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_function_value/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_function_value/src/i386.c:2781:23: error: use of undeclared identifier 'machine_mode'
return gen_rtx_REG( ( machine_mode)v3, v2); 
                      ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_function_value/src/obj/i386.o] Error 1
